--- a/config/rbac/auth_proxy_service.yaml
+++ b/config/rbac/auth_proxy_service.yaml
@@ -6,8 +6,8 @@ metadata:
     app.kubernetes.io/name: service
     app.kubernetes.io/instance: controller-manager-metrics-service
     app.kubernetes.io/component: kube-rbac-proxy
-    app.kubernetes.io/created-by: label-operator
-    app.kubernetes.io/part-of: label-operator
+    app.kubernetes.io/created-by: registry-controller
+    app.kubernetes.io/part-of: registry-controller
     app.kubernetes.io/managed-by: kustomize
   name: controller-manager-metrics-service
   namespace: system
