--- a/config/rbac/leader_election_role_binding.yaml
+++ b/config/rbac/leader_election_role_binding.yaml
@@ -5,8 +5,8 @@ metadata:
     app.kubernetes.io/name: rolebinding
     app.kubernetes.io/instance: leader-election-rolebinding
     app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: label-operator
-    app.kubernetes.io/part-of: label-operator
+    app.kubernetes.io/created-by: registry-controller
+    app.kubernetes.io/part-of: registry-controller
     app.kubernetes.io/managed-by: kustomize
   name: leader-election-rolebinding
 roleRef:
