--- a/config/rbac/service_account.yaml
+++ b/config/rbac/service_account.yaml
@@ -5,8 +5,8 @@ metadata:
     app.kubernetes.io/name: serviceaccount
     app.kubernetes.io/instance: controller-manager
     app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: label-operator
-    app.kubernetes.io/part-of: label-operator
+    app.kubernetes.io/created-by: registry-controller
+    app.kubernetes.io/part-of: registry-controller
     app.kubernetes.io/managed-by: kustomize
   name: controller-manager
   namespace: system
